[fix][cli] Fix mbeans to json
Signed-off-by: Zixuan Liu <nodeces@gmail.com>