@@ -1915,6 +1915,8 @@ flexible messaging model and an intuitive client API.</description>
           --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
           --add-opens java.base/java.lang=ALL-UNNAMED <!--Mockito-->
           --add-opens java.base/java.io=ALL-UNNAMED <!--Bookkeeper NativeIO -->
+          --add-opens java.management/sun.management=ALL-UNNAMED <!--JvmDefaultGCMetricsLogger & MBeanStatsGenerator-->
+          --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED <!--MBeanStatsGenerator-->
         </test.additional.args>
       </properties>
       <build>
